# yolo-code-assistant

./: .gitignore  README.md
yolo-code-assistant/: .env.sample  Makefile  README.md  main.py  pyproject.toml
yolo-code-assistant/docs/: README.md
yolo-code-assistant/notebooks/: 01_indexing_exploration.ipynb  02_embedding_evaluation.ipynb  03_retrieval_testing.ipynb
yolo-code-assistant/src/: __init__.py  config.py  types.py
yolo-code-assistant/src/generation/: __init__.py  openrouter_client.py
yolo-code-assistant/src/indexer/: __init__.py  chunker.py  code_parser.py  embedder.py
yolo-code-assistant/src/retrieval/: __init__.py  ranker.py  search.py
yolo-code-assistant/src/storage/: __init__.py  mongodb_client.py  vector_store.py
yolo-code-assistant/src/ui/: __init__.py  gradio_app.py
yolo-code-assistant/tests/: README.md  __init__.py  conftest.py  run_tests.py  simple_test.py  test_code_execution.py  test_integration.py  test_utils.py  test_yolo_code_generation.py
yolo-mcp-server/: .env.example  .gitignore  Dockerfile  README.md  mcp_server.py  pyproject.toml  run_mcp_server.sh
