[project]
name = "yolo-mcp-server"
version = "0.1.0"
description = "MCP server for YOLO code generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "pymongo",
    "sentence-transformers",
    "openai",
    "python-dotenv",
    "gitpython",
    "tqdm",
    "tree-sitter",
    "tree-sitter-python",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
